--- a/lab3/style/Merdak_style3.css
+++ b/lab3/style/Merdak_style3.css
@@ -16,8 +16,10 @@ h4{
 
 div.text1, div.text2{
     top: 100px;
+    display: inline-block;
+    position: inherit;
+    overflow: scroll;
     background-image: url(../img/Merdak_bg_menu.gif);
-	position: absolute;
     height: 120%;
     padding: 10px;
     text-indent: 15px;
